Add references suggested by Vivechna

--- a/paper.tex
+++ b/paper.tex
@@ -121,7 +121,8 @@ Apart from some methods developed by S.E. Fosdick et al. \cite{fosdick2010two},
 %[JACS  2010, 132, 9226-9227],
 synthesis of  Ag-Au alloy gradients on steel and chemical composition
 gradients of CdS layers
-on gold electrodes have also been obtained \cite{wang2019fabrication}.
+on gold electrodes have also been obtained
+\cite{ramaswamy_screening_2011,ramakrishnan_display_2010}.
 Among electrochemical methods, changes in the composition and doping density
 of  conducting polymers have been used to produce gradients using Indium Tin
 Oxide electrodes \cite{inagi2010bipolar}.
@@ -141,15 +142,15 @@ temperature, it has presently
 been recognized as a multifaceted optical material due to its large surface
 area, bio-compatibility, ease of fabrication and tunable refractive index.
 Applications based on porous silicon now cover various fields such as
-chemical sensors and biosensors \cite{kumar2020porous},
+chemical sensors and biosensors \cite{kumar2020porous,lin_porous_1997,dancil_porous_1999},
 microelectronics and micro-mechanical systems (MEMS)
 \cite{martinez2016dual}, as well as a
 range of optical \cite{estevez2014porous} and opto-electronic applications
-\cite{ramadan2020fabrication}. Specifically,
+\cite{ramadan2020fabrication,namavar_optoelectronic_1993,galkin_mechanisms_2017,gelloz_electroluminescence_2018}. Specifically,
 the temporal variation of the current density results in a variation of
 porosity along the depth, allowing the easy fabrication of different kinds
-\cite{perez2018reflectivity} of 1D dielectric multilayered
-structures.
+\cite{perez2018reflectivity,ariza-flores_white_2012,ghulinyan_porous_2003,girault_porous_2017}
+of 1D dielectric multilayered structures.
 Although the conventional fabrication of PS yields laterally
 homogeneous samples, with invariant structural and optical properties
 along the surface, another configuration where a Pt pin electrode is placed
@@ -158,7 +159,7 @@ silicon structures with a lateral gradient in properties such as
 thickness, pore size and density, and thus, refractive index and
 optical thickness \cite{khung2008using, clements2011mesenchymal}.
 The resulting porous surface can have pore sizes ranging from a few nanometers
-to  few micrometers  \cite{wang2015screening}. The range of the dimensions of the pores and
+to  few micrometers  \cite{canham_routes_2018}. The range of the dimensions of the pores and
 the corresponding  thickness range on the same chip can be controlled by
 adjusting the location of the electrode, the  anodizing current
 and the etching time. Different
@@ -531,7 +532,11 @@ $j_\perp=-\sigma\partial\phi/\partial z$,
 \end{equation}
 Eq. \eqref{Eq:J} is a very rapidly convergent expression that allows,
 in particular, to calculate the current $j_\perp(x,y,0)$ that attacks
-the substrate to produce the PS sample.
+the substrate to produce the PS sample. As expected, the current
+at the surface $z=0$ of the sample becomes more homogeneous as the
+distance $z_0$ to the tip of the electrode and the height of the
+electrolite $c>z_0$ increase, as each term in the sum decays
+approximately exponentially with increasing $z_0$.
 Integrating over the surface of the sample we verify
 \begin{equation}
   \label{eq:intj}
@@ -899,7 +904,7 @@ chosen as those that increase the sum of squared errors by 10\% with
 respect to its minimum value.
 
 From the data in Table \ref{t:jpdv} we can plot the fitted porosity vs.
-the calculated density current $\j_\perp$, as shown for our three
+the calculated density current $j_\perp$, as shown for our three
 samples in Fig. \ref{fig:p}.
 \begin{figure}
   \centering
