Add the international edition in reference to inagi 2010

--- a/bibligrin.bib
+++ b/bibligrin.bib
@@ -314,7 +314,7 @@ WOS:000085985800038},
 	file = {ScienceDirect Snapshot:/home/mochan/.mozilla/firefox/af5ppez9.default/zotero/storage/BYFWT24B/S0925346717304469.html:text/html;ScienceDirect Snapshot:/home/mochan/.mozilla/firefox/af5ppez9.default/zotero/storage/5FZ7J85J/S0925346717304469.html:text/html;Submitted Version:/home/mochan/.mozilla/firefox/af5ppez9.default/zotero/storage/C5WMCVYR/Girault et al. - 2017 - Porous silicon micro-resonator implemented by stan.pdf:application/pdf}
 }
 
-@article{inagi2010bipolar,
+article{inagi2010bipolar,
   title={Bipolar Patterningl of Conducting Polymers by Electrochemical Doping and Reaction},
   author={Inagi, Shinsuke and Ishiguro, Yutaka and Atobe, Mahito and Fuchigami, Toshio},
   journal={Angewandte Chemie},
@@ -323,6 +323,26 @@ WOS:000085985800038},
   pages={10334--10337},
   year={2010},
   publisher={Wiley Online Library}
+}
+
+
+@article{inagi2010bipolar,
+	title = {Bipolar Patterning of Conducting Polymers by Electrochemical Doping and Reaction},
+	volume = {49},
+	copyright = {Copyright © 2010 WILEY‐VCH Verlag GmbH \& Co. KGaA, Weinheim},
+	issn = {1521-3773},
+	url = {https://onlinelibrary.wiley.com/doi/abs/10.1002/anie.201005671},
+	doi = {https://doi.org/10.1002/anie.201005671},
+	abstract = {On the double: When a poly(3-methylthiophene) (PT) film is doped on a bipolar electrode with Bu4NPF6 as supporting electrolyte, the film includes PF6− anions with a composition gradient along the potential gradient on the electrode. The use of Et4NCl results in partial chlorination of the PT film that reflects the potential gradient of the bipolar electrode (see picture; inset: photograph of the film).},
+	number = {52},
+	urldate = {2021-01-06},
+	journal = {Angewandte Chemie International Edition},
+	author = {Inagi, Shinsuke and Ishiguro, Yutaka and Atobe, Mahito and Fuchigami, Toshio},
+	year = {2010},
+	annote = {eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1002/anie.201005671},
+	keywords = {conducting materials, doping, electrochemistry, polymers, thin films},
+	pages = {10136--10139},
+	file = {Snapshot:/home/mochan/.mozilla/firefox/af5ppez9.default/zotero/storage/GB4C76D7/anie.html:text/html}
 }
 
 @article{ishiguro2011gradient,
